# astrolabe

./: Cargo.toml  README.md
.github/workflows/: ci.yml  clippy.yml  code-cov.yml  tests.yml
src/: consts.rs  lib.rs  program.rs
src/body/: mod.rs  observatory.rs  observitory.rs  rotating_body.rs
src/dynamic/: fixed.rs  keplerian.rs  mod.rs
src/output/: mod.rs  svg.rs
src/projection/: mod.rs  orthographic.rs
